# python-template

./: .pre-commit-config.yaml  .ruff.toml  mypy.ini  pyproject.toml
