[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "Python template for project with poetry and python 3.11"
authors = ["web-lizzard <czarnous.adrian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.x"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
syrupy = "^4.7.1"
pytest-mock = "^3.14.0"
pylint = "^3.2.6"
pytest-http = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
